[package]
name = "ludicrous"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
lto = false

[profile.release]
opt-level = 3
lto = true

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
reqwest = {version = "0.12.26", features = ["json"]}
futures = "0.3.31"
once_cell = "1.21.3"
serde_json = "1.0.140"
serde_plain = "1.0.2"
async-trait = "0.1.88"
rand = "0.8.5"
rsa = "0.9.8"
sha1 = "0.10.6"
md5 = "0.7.0"
uuid = {version = "1.16.0", features = ["v4", "v3"]}
openssl = "0.10.72"
flate2 = "1.1.1"
zip = "7.0.0"
lz4 = "1.28.1"
fastnbt = "2.5.0"
serde = {version = "1.0.219", features = ["derive"]}
time = {version = "0.3.41", features = ["formatting", "local-offset"]}
time-macros = "0.2.22"
rayon = "1.10.0"
ahash = {version = "0.8.12", features = ["serde"]}
dashmap = "6.1.0"
bytemuck = {version = "1.23.1", features = ["derive"]}
opencl3 = "0.12.0"
chrono = "0.4.42"
